--- a/public/package.json
+++ b/public/package.json
@@ -17,6 +17,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.10.0",
     "swiper": "^9.2.0"
   },
