--- a/public/package.json
+++ b/public/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.8.0",
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.2",
     "swiper": "^9.2.0"
   },
   "devDependencies": {
