--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@vercel/analytics": "^1.0.2",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "lodash": "^4.17.21",
